added listener stub, to fill up once we manage to connect to jade servers

--- a/air/JadeDS/JadeDS.vcxproj.filters
+++ b/air/JadeDS/JadeDS.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="jade.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JadeListener.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
