--- a/air/JadeDS/JadeDS.vcxproj
+++ b/air/JadeDS/JadeDS.vcxproj
@@ -64,6 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="jade.cpp" />
+    <ClCompile Include="JadeListener.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
