jadeds wrapper changes

--- a/air/JadeDS/JadeDS.vcxproj
+++ b/air/JadeDS/JadeDS.vcxproj
@@ -56,11 +56,14 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
+	        <AdditionalIncludeDirectories>C:\Users\ido\Desktop\cardinal-quest-haxe\air\JadeDS\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+	        <AdditionalLibraryDirectories>C:\Users\ido\Desktop\cardinal-quest-haxe\air\JadeDS\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>JadeDSConnect.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
