minor change to keep landscape

--- a/corona/build.settings
+++ b/corona/build.settings
@@ -15,7 +15,7 @@ settings=
             UIAppFonts=
             {
                 "AnonymousPro-Regular.ttf",
-                "Anonymous-Pro-B.ttf"
+                "Anonymous-Pro-B.ttf",
                 "Dungeon.ttf",
             }
         }
